# worldline

./: Cargo.toml  README.md  justfile
src/: main.rs
src/app_state/: mod.rs  player.rs  state.rs
src/general/: schwarzschild.rs
src/graphics/: camera.rs  graphics_controller.rs  mod.rs  model.rs  packing.rs  texture.rs  vertex.rs
src/graphics/shaders/: blur.wgsl  invert.wgsl  main_2d.wgsl  main_3d.wgsl  outline.wgsl  present.wgsl
src/gui/: builder.rs  color.rs  element.rs  mod.rs  text.rs  texture_frame.rs  transform.rs
src/gui/component/: button.rs  menu.rs  mod.rs  text_box.rs
src/shared/: bounding_box.rs  char_indexing.rs  f32_util.rs  indexed_container.rs  input.rs  mod.rs  numerical_integration.rs  performance_counter.rs
src/special/: inertial_frame.rs  metric.rs  mod.rs  transform.rs  universe.rs  worldline.rs
