[package]
name = "worldline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytemuck = { version = "1.15.0", features = ["derive"] }
cgmath = { version = "0.18.0", features = ["swizzle", "serde"] }
clipboard-anywhere = "0.2.3"
codepage-437 = "0.1.0"
color-eyre = "0.6.3"
derive_more = "0.99.17"
env_logger = "0.11.3"
futures = { version = "0.3.30", features = ["futures-executor"] }
image = "0.25.1"
include_dir = "0.7.3"
lazy_static = "1.4.0"
linear-map = "1.2.0"
log = "0.4.19"
obj = "0.10.2"
rand = "0.8.5"
rayon = "1.10.0"
smol_str = "0.2.1"
thiserror = "1.0.43"
wgpu = { version = "0.20.0", features = ["glsl"] }
winit = { version = "0.30.0", features = ["rwh_05"] }

[profile.dev]
opt-level = 3

[features]
no_vsync = []
